--- a/public/main.css
+++ b/public/main.css
@@ -33,3 +33,8 @@ header {
 footer {
     border-top: 1px solid black;
 }
+
+.posts-list .headline-post .snippet {
+    max-height: 5rem;
+    overflow: hidden;
+}
