--- a/public/main.css
+++ b/public/main.css
@@ -16,14 +16,13 @@ body {
 
 main {
     flex: 1;
-    padding: 2rem;
+    padding: 5rem;
 }
 
 header, footer {
     align-items: center;
     display: flex;
     justify-content: center;
-    height: 50px;
 }
 
 header {
@@ -32,4 +31,44 @@ header {
 
 footer {
     border-top: 1px solid black;
+    padding: 1rem;
+}
+
+.posts-list .headline-post {
+    border-radius: 5px;
+    box-shadow: 0 0 25px 5px rgba(0, 0, 0, 0.15);
+    font-size: 125%;
+    margin-bottom: 5rem;
+}
+
+.posts-list .headline-post .title,
+.posts-list .headline-post .meta,
+.posts-list .headline-post .snippet {
+    padding: 0 1rem;
+}
+
+.posts-list .headline-post .snippet {
+    margin-bottom: 0;
+    max-height: 5rem;
+    overflow: hidden;
+}
+
+.posts-list .headline-post .more {
+    align-items: center;
+    box-shadow: 0px -25px 25px rgba(0, 0, 0, .15);
+    display: flex;
+    flex-direction: column;
+    height: 3rem;
+    justify-content: center;
+    margin: 0;
+}
+
+.posts-list .remaining-posts {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.posts-list .remaining-posts .post-summary {
+    margin-bottom: 2rem;
 }
