--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -7,7 +7,7 @@
         <h1>What's on your mind?</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_ul }}
+            <ul>{{ form.as_ul }}</ul>
             <button type="submit">Post!</button>
         </form>
     </div>
