--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -7,7 +7,7 @@
         <h1>Log Into Blahgr</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_ul }}
+            <ul>{{ form.as_ul }}</ul>
             <button type="submit">Log In</button>
         </form>
     </div>
