--- a/users/templates/signin.html
+++ b/users/templates/signin.html
@@ -7,7 +7,7 @@
         <h1>Join the blahrgin' fun!</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_ul }}
+            <ul>{{ form.as_ul }}</ul>
             <button type="submit">Sign Up</button>
         </form>
     </div>
