--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Sign up!{% endblock %}
+{% block title %}Write a new post{% endblock %}
 
 {% block content %}
     <div>
-        <h1>Join the blahrgin' fun!</h1>
+        <h1>What's on your mind?</h1>
         <form method="POST">
             {% csrf_token %}
             <ul>{{ form.as_ul }}</ul>
-            <button type="submit">Sign Up</button>
+            <button type="submit">Post!</button>
         </form>
     </div>
 {% endblock %}
