--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,7 @@
 <nav>
     <ul>
         {% if user.is_authenticated %}
+            <li>Welcome {{ user.username }}</li>
             <li><a href="{% url 'blog-new' %}">➕ Write a new post!</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
         {% else %}
