--- a/blog/templates/details.html
+++ b/blog/templates/details.html
@@ -16,6 +16,13 @@
             {% for comment in post.comments.all %}
             <li>{{ comment.author.username }} at {{comment.created_at|date:'m/d/Y h:i A'}} said
                 <blockquote>{{ comment.text }}</blockquote>
+
+                {% if comment.author.id == user.id %}
+                    <form class="delete" method="POST" action="{% url 'comment-delete' comment.id %}">
+                        {% csrf_token %}
+                        <button type="submit">Remove the comment</button>
+                    </form>
+                {% endif %}
             </li>
             {% endfor %}
         </ul>
@@ -31,5 +38,12 @@
     {% endif %}
 
     <p><a href="{% url 'blog-index' %}">&larr; Back to posts</a></p>
+
+    {% if post.author.id == user.id %}
+        <form class="delete" method="POST" action="{% url 'blog-delete' post.id %}">
+            {% csrf_token %}
+            <button type="submit">Remove the post</button>
+        </form>
+    {% endif %}
 {% endspaceless %}
 {% endblock %}
