--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -5,10 +5,10 @@
 {% block content %}
     <div>
         <h1>What's on your mind?</h1>
-        <form method="POST">
+        <form class="flex" method="POST">
             {% csrf_token %}
             <ul>{{ form.as_ul }}</ul>
-            <button type="submit">Post!</button>
+            <button class="primary" type="submit">Post!</button>
         </form>
     </div>
 {% endblock %}
