--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
 
         {% load static %}
         <link href="{% static 'main.css' %}" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header>
