--- a/templates/header.html
+++ b/templates/header.html
@@ -1,12 +1,12 @@
 <nav>
-    <ul>
+    <a class="logo" href="/">Blahgr</a>
+    <ul class="context-links">
         {% if user.is_authenticated %}
-            <li>Welcome {{ user.username }}</li>
-            <li><a href="{% url 'blog-new' %}">➕ Write a new post!</a></li>
+            <li><a href="{% url 'blog-new' %}">New post</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
         {% else %}
             <li><a href="{% url 'login' %}">Log In</a></li>
-            <li><a href="{% url 'signup' %}">Sign Up!</a></li>
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
         {% endif %}
     </ul>
 </nav>
