--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -5,10 +5,10 @@
 {% block content %}
     <div>
         <h1>Log Into Blahgr</h1>
-        <form method="POST">
+        <form class="flex" method="POST">
             {% csrf_token %}
             <ul>{{ form.as_ul }}</ul>
-            <button type="submit">Log In</button>
+            <button class="primary" type="submit">Log In</button>
         </form>
     </div>
 {% endblock %}
