--- a/public/main.css
+++ b/public/main.css
@@ -18,8 +18,21 @@ a:hover {
     flex-direction: column;
 }
 
-form.delete {
+.author-controls {
+    display: flex;
     float: right;
+}
+
+.author-controls .edit {
+    font-size: 24px;
+    text-decoration: none;
+}
+
+.author-controls .trash {
+    background-color: white;
+    color: #A71C1C;
+    font-size: 24px;
+    padding: 0;
 }
 
 form ul {
@@ -58,12 +71,6 @@ button.primary {
     background-color: #426BA2;
     color: white;
     /*font-size: 18px;*/
-}
-
-button.trash {
-    background-color: white;
-    color: #A71C1C;
-    font-size: 24px;
 }
 
 form .errorlist {
